@@ -20,6 +20,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|Objects
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
 import|;
 end_import
@@ -78,7 +87,15 @@ name|NamedSPILoader
 operator|.
 name|NamedSPI
 block|{
-DECL|field|loader
+comment|/**    * This static holder class prevents classloading deadlock by delaying    * init of default codecs and available codecs until needed.    */
+DECL|class|Holder
+specifier|private
+specifier|static
+specifier|final
+class|class
+name|Holder
+block|{
+DECL|field|LOADER
 specifier|private
 specifier|static
 specifier|final
@@ -86,7 +103,7 @@ name|NamedSPILoader
 argument_list|<
 name|Codec
 argument_list|>
-name|loader
+name|LOADER
 init|=
 operator|new
 name|NamedSPILoader
@@ -97,6 +114,55 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
+DECL|method|Holder
+specifier|private
+name|Holder
+parameter_list|()
+block|{}
+DECL|method|getLoader
+specifier|static
+name|NamedSPILoader
+argument_list|<
+name|Codec
+argument_list|>
+name|getLoader
+parameter_list|()
+block|{
+if|if
+condition|(
+name|LOADER
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"You tried to lookup a Codec by name before all Codecs could be initialized. "
+operator|+
+literal|"This likely happens if you call Codec#forName from a Codec's ctor."
+argument_list|)
+throw|;
+block|}
+return|return
+name|LOADER
+return|;
+block|}
+comment|// TODO: should we use this, or maybe a system property is better?
+DECL|field|defaultCodec
+specifier|static
+name|Codec
+name|defaultCodec
+init|=
+name|LOADER
+operator|.
+name|lookup
+argument_list|(
+literal|"Lucene50"
+argument_list|)
+decl_stmt|;
+block|}
 DECL|field|name
 specifier|private
 specifier|final
@@ -223,25 +289,11 @@ name|String
 name|name
 parameter_list|)
 block|{
-if|if
-condition|(
-name|loader
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalStateException
-argument_list|(
-literal|"You called Codec.forName() before all Codecs could be initialized. "
-operator|+
-literal|"This likely happens if you call it from a Codec's ctor."
-argument_list|)
-throw|;
-block|}
 return|return
-name|loader
+name|Holder
+operator|.
+name|getLoader
+argument_list|()
 operator|.
 name|lookup
 argument_list|(
@@ -260,25 +312,11 @@ argument_list|>
 name|availableCodecs
 parameter_list|()
 block|{
-if|if
-condition|(
-name|loader
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalStateException
-argument_list|(
-literal|"You called Codec.availableCodecs() before all Codecs could be initialized. "
-operator|+
-literal|"This likely happens if you call it from a Codec's ctor."
-argument_list|)
-throw|;
-block|}
 return|return
-name|loader
+name|Holder
+operator|.
+name|getLoader
+argument_list|()
 operator|.
 name|availableServices
 argument_list|()
@@ -295,7 +333,10 @@ name|ClassLoader
 name|classloader
 parameter_list|)
 block|{
-name|loader
+name|Holder
+operator|.
+name|getLoader
+argument_list|()
 operator|.
 name|reload
 argument_list|(
@@ -303,21 +344,7 @@ name|classloader
 argument_list|)
 expr_stmt|;
 block|}
-DECL|field|defaultCodec
-specifier|private
-specifier|static
-name|Codec
-name|defaultCodec
-init|=
-name|Codec
-operator|.
-name|forName
-argument_list|(
-literal|"Lucene50"
-argument_list|)
-decl_stmt|;
 comment|/** expert: returns the default codec used for newly created    *  {@link IndexWriterConfig}s.    */
-comment|// TODO: should we use this, or maybe a system property is better?
 DECL|method|getDefault
 specifier|public
 specifier|static
@@ -325,7 +352,28 @@ name|Codec
 name|getDefault
 parameter_list|()
 block|{
+if|if
+condition|(
+name|Holder
+operator|.
+name|defaultCodec
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"You tried to lookup the default Codec before all Codecs could be initialized. "
+operator|+
+literal|"This likely happens if you try to get it from a Codec's ctor."
+argument_list|)
+throw|;
+block|}
 return|return
+name|Holder
+operator|.
 name|defaultCodec
 return|;
 block|}
@@ -340,9 +388,16 @@ name|Codec
 name|codec
 parameter_list|)
 block|{
+name|Holder
+operator|.
 name|defaultCodec
 operator|=
+name|Objects
+operator|.
+name|requireNonNull
+argument_list|(
 name|codec
+argument_list|)
 expr_stmt|;
 block|}
 comment|/**    * returns the codec's name. Subclasses can override to provide    * more detail (such as parameters).    */
