@@ -94,7 +94,15 @@ name|NamedSPILoader
 operator|.
 name|NamedSPI
 block|{
-DECL|field|loader
+comment|/**    * This static holder class prevents classloading deadlock by delaying    * init of doc values formats until needed.    */
+DECL|class|Holder
+specifier|private
+specifier|static
+specifier|final
+class|class
+name|Holder
+block|{
+DECL|field|LOADER
 specifier|private
 specifier|static
 specifier|final
@@ -102,7 +110,7 @@ name|NamedSPILoader
 argument_list|<
 name|DocValuesFormat
 argument_list|>
-name|loader
+name|LOADER
 init|=
 operator|new
 name|NamedSPILoader
@@ -113,6 +121,42 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
+DECL|method|Holder
+specifier|private
+name|Holder
+parameter_list|()
+block|{}
+DECL|method|getLoader
+specifier|static
+name|NamedSPILoader
+argument_list|<
+name|DocValuesFormat
+argument_list|>
+name|getLoader
+parameter_list|()
+block|{
+if|if
+condition|(
+name|LOADER
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"You tried to lookup a DocValuesFormat by name before all formats could be initialized. "
+operator|+
+literal|"This likely happens if you call DocValuesFormat#forName from a DocValuesFormat's ctor."
+argument_list|)
+throw|;
+block|}
+return|return
+name|LOADER
+return|;
+block|}
+block|}
 comment|/** Unique name that's used to retrieve this format when    *  reading the index.    */
 DECL|field|name
 specifier|private
@@ -209,25 +253,11 @@ name|String
 name|name
 parameter_list|)
 block|{
-if|if
-condition|(
-name|loader
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalStateException
-argument_list|(
-literal|"You called DocValuesFormat.forName() before all formats could be initialized. "
-operator|+
-literal|"This likely happens if you call it from a DocValuesFormat's ctor."
-argument_list|)
-throw|;
-block|}
 return|return
-name|loader
+name|Holder
+operator|.
+name|getLoader
+argument_list|()
 operator|.
 name|lookup
 argument_list|(
@@ -246,25 +276,11 @@ argument_list|>
 name|availableDocValuesFormats
 parameter_list|()
 block|{
-if|if
-condition|(
-name|loader
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalStateException
-argument_list|(
-literal|"You called DocValuesFormat.availableDocValuesFormats() before all formats could be initialized. "
-operator|+
-literal|"This likely happens if you call it from a DocValuesFormat's ctor."
-argument_list|)
-throw|;
-block|}
 return|return
-name|loader
+name|Holder
+operator|.
+name|getLoader
+argument_list|()
 operator|.
 name|availableServices
 argument_list|()
@@ -281,7 +297,10 @@ name|ClassLoader
 name|classloader
 parameter_list|)
 block|{
-name|loader
+name|Holder
+operator|.
+name|getLoader
+argument_list|()
 operator|.
 name|reload
 argument_list|(
